Version 0.9.43   unreleased

   * Bump up to GWT 2.7.0 now that it's been officially released.

Version 0.9.42   09 Nov 2014

    * Bump up to CedarCommon v5.0.1 and CedarBuild v0.8.11 to get support for GWT 2.7.x.
    * Bump up to AppEngine v1.9.15 and upgrade a variety of other dependencies to latest version.
    * Update client code that uses AbstractDropdownList to handle change in interface.

Version 0.9.41   28 Oct 2014

    * Bump up to CedarCommon v4.9.1 to get improvements for multi-tabbed views.

Version 0.9.40   23 Oct 2014

    * Bump up to CedarCommon v4.9.0, to get new GwtCacheControlFilter class.
    * Try to improve deploy behavior with better cache configuration for GWT files.

Version 0.9.39   09 Oct 2014

    * Use Long.valueOf() and not Integer.valueOf() when assigning to a long, duh.

Version 0.9.38   26 Sep 2014

    * Bump up to CedarBuild v0.8.10, to get Cucumber-related improvements.
    * Bump up to CedarCommon v4.8.0, to get updated date format in JavaLoggingFormatter.
    * Bump up to AppEngine v1.9.11, since v1.9.6 is getting kind of old.
    * Change standard log4j date format to include time zone.
    * Fix build.gradle so AppEngine dependencies are properly divorced from versions in CedarCommon.
    * Be more strict about using Mockito's isA() in unit tests rather than any().
    * Add a global uncaught exception handler to catch and display UI errors.
    * Fix the bottom border on top menu by using position:absolute instead of position:fixed.
    * Update RPCs to throw service exceptions using ServiceExceptionUtils.createServiceException().
    * Pull in improvements to Cucumber utility functions in extensions.rb.
    * Remove the locked.feature Cucumber test suite, which could not be made to pass reliably.
    * Implement a new Cucumber output formatter that's more succinct and easier to read.
    * Add configuration for memory and permgen space.
    * Add Gradle support for Checkstyle, Jacoco coverage, and JavaNCSS metrics.